--- a/styles/global.css
+++ b/styles/global.css
@@ -31,7 +31,7 @@
 
 html,
 button {
-	font: 500 1rem/1.5 'Montserrat', sans-serif;
+	font: 500 1rem/1.5 var(--ff-base);
 }
 
 h1,
@@ -47,4 +47,9 @@ h1 {
 h2 {
 	font-size: var(--text-lg);
 	line-height: 1.2;
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
 }
