--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,8 +1,13 @@
 section.hero {
-	max-widht: 80rem;
+	max-width: 80rem;
 	width: 100%;
 	padding: 2.5rem 2rem;
 	margin-inline: auto;
+
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	overflow: hidden;
 
 	& h1 {
 		max-width: 40rem;
@@ -33,7 +38,7 @@ section.hero {
 	& h1 span {
 		display: block;
 
-		animation: slideUp 8s infinite ease;
+		animation: slideUp 5s 2s infinite ease;
 	}
 
 	/* Buttons */
@@ -71,6 +76,75 @@ section.hero {
 		& .shadow {
 			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1), 0 9px 9px rgba(0, 0, 0, 0.09), 0 20px 12px rgba(0, 0, 0, 0.05), 0 36px 15px rgba(0, 0, 0, 0.01);
 		}
+	}
+
+	/* Patins */
+
+	& > div:nth-child(2) {
+		display: block;
+		width: 100%;
+		max-width: 30.5rem;
+		height: 30.5rem;
+
+		& .content {
+			width: 100%;
+			height: 100%;
+			position: relative;
+		}
+
+		& img {
+			position: absolute;
+			width: 100%;
+		}
+
+		& img[src*='Ellipse'] {
+			width: 94%;
+			inset: 3%;
+
+			transform: translateX(200%);
+			animation: slideIn 3s 200ms ease forwards;
+		}
+
+		& img[src*='patins'] {
+			z-index: 1;
+			transform: translateX(200%);
+			animation: slideIn 3s ease forwards;
+		}
+
+		& img[src*='stars-1'] {
+			max-width: 5.5rem;
+			top: 30%;
+			z-index: 0;
+
+			opacity: 0;
+			transform: translateX(400%);
+			animation: slideIn 2s 800ms ease forwards, appear 100ms 800ms forwards;
+		}
+
+		& img[src*='stars-2'] {
+			max-width: 2.5rem;
+			right: 0;
+			bottom: 35%;
+
+			transform: translateX(400%);
+			animation: slideIn 2.2s 800ms ease forwards;
+		}
+	}
+}
+
+@keyframes slideIn {
+	50% {
+		transform: translateX(-32px);
+	}
+
+	100% {
+		transform: translateX(0);
+	}
+}
+
+@keyframes appear {
+	to {
+		opacity: 1;
 	}
 }
 
