--- a/styles/global.css
+++ b/styles/global.css
@@ -34,10 +34,6 @@ button {
 	font: 500 1rem/1.5 var(--ff-base);
 }
 
-html {
-	zoom: 0.5;
-}
-
 h1,
 h2 {
 	font-family: 'Syne', sans-serif;
@@ -56,4 +52,11 @@ h2 {
 a {
 	color: inherit;
 	text-decoration: none;
+}
+
+@media (max-width: 23.75rem) {
+	h1 {
+		font-size: 2rem;
+		line-height: 1;
+	}
 }
